[package]
name = "merge-images"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.54.0"
imagesize = "0.9.0"
log = "0.4.14"

[dev-dependencies]
pretty_env_logger = "0.4.0"
reqwest = "0.11.6"
anyhow = "1.0.44"
tokio = { version = "1", features = ["macros"] }
futures = "0.3"
